Fix Contrast Error accessibility issues (VPAT) (#582)
* Fix very low contrast issue-VPAT

--- a/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
+++ b/themes/custom/apigee_kickstart/assets/css/apigee-kickstart.style.css
@@ -2628,6 +2628,11 @@ fieldset:disabled a.btn {
   box-shadow: 0 0 0 0.2rem rgba(221, 221, 221, 0.5);
 }
 
+.description.text-muted a, 
+.card-group__buttons .btn-outline-primary {
+  background-color: #fff !important;
+}
+
 .btn-outline-primary {
   color: #2196f3;
   border-color: #2196f3;
@@ -4565,7 +4570,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   float: left;
   padding-right: 0.375rem;
-  color: rgba(0, 0, 0, 0.4);
+  color: #fff;
   content: ">";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -10782,7 +10787,7 @@ a.text-lighter:hover, a.text-lighter:focus {
 }
 
 .text-muted {
-  color: #787878 !important;
+  color: #4F4F4F !important;
 }
 
 .text-black-50 {
@@ -11724,7 +11729,7 @@ fieldset > .fieldset-wrapper p:last-child {
   right: 0.5rem;
   bottom: 2px;
   height: 2px;
-  background-color: var(--ak-accent-color);
+  background-color: var(--ak-header-color);
   display: none;
 }
 @media (min-width: 992px) {
